--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "jsdom": "^24.0.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-alert": "^7.0.3",
     "react-dom": "^18",
     "react-final-form": "^6.5.9",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
